--- a/_factory/index/custom.html
+++ b/_factory/index/custom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GAME TITLE -- testing</title>
+	<title>Cool Archer</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<!-- Use this metatag when Apple fixes their IOS 9
@@ -42,7 +42,7 @@
 					<center>												
 <!-- MobileAdInGamePreroll -->	
 <!-- AdTest-MobileAdInGamePreroll -->
-<img src="https://cdn-factory.marketjs.com/generic.png">
+<!-- <img src="https://cdn-factory.marketjs.com/generic.png"> -->
 <!-- EndOfAdTest-MobileAdInGamePreroll -->
 					</center>
 				</div>
