--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	
-	<link rel="stylesheet" type="text/css" href="game.css">	
+	<link rel="stylesheet" type="text/css" href="game.css?v=1641172896">	
     
-	<script type="text/javascript" src="game.js"></script>
+	<script type="text/javascript" src="game.js?v=1641172896"></script>
 <!-- AnalyticsCode -->	
 
 <!-- APICode -->
