--- a/weltmeister.html
+++ b/weltmeister.html
@@ -10,7 +10,7 @@
 	<script src="lib/weltmeister/jquery-ui-1.8.1.custom.min.js" type="text/javascript" charset="utf-8"></script>
 
 
-	<script src="lib/babylon/babylon.4.2.0.max.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/babylon/babylon.js" type="text/javascript" charset="utf-8"></script>
 	<script src="lib/impact/impact.js" type="text/javascript" charset="utf-8"></script>
 	<script src="lib/weltmeister/weltmeister.js" type="text/javascript" charset="utf-8"></script>
 
