--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Cool Archer</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="media/graphics/misc/favicon.ico" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<!-- Use this metatag when Apple fixes their IOS 9
 	<meta name="viewport" content="width=device-width,height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui"/>
@@ -13,9 +13,9 @@
 		
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	
-	<link rel="stylesheet" type="text/css" href="game.css?v=1656676978">	
+	<link rel="stylesheet" type="text/css" href="game.css?v=1656928072">	
     
-	<script type="text/javascript" src="game.js?v=1656676978"></script>
+	<script type="text/javascript" src="game.js?v=1656928072"></script>
 <!-- AnalyticsCode -->	
 
 <!-- APICode -->
