--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	
-	<link rel="stylesheet" type="text/css" href="game.css?v=1657792111">	
+	<link rel="stylesheet" type="text/css" href="game.css?v=1660194598">	
     
-	<script type="text/javascript" src="game.js?v=1657792111"></script>
+	<script type="text/javascript" src="game.js?v=1660194598"></script>
 <!-- AnalyticsCode -->	
 
 <!-- APICode -->
@@ -41,6 +41,9 @@
 				<div id="MobileAdInGamePreroll-Box-Body">
 					<center>												
 <!-- MobileAdInGamePreroll -->	
+<!-- AdTest-MobileAdInGamePreroll -->
+<!-- <img src="https://cdn-factory.marketjs.com/generic.png"> -->
+<!-- EndOfAdTest-MobileAdInGamePreroll -->
 					</center>
 				</div>
 				<div id='MobileAdInGamePreroll-Box-Footer'></div>				
