--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
-	<link rel="stylesheet" type="text/css" href="game.css?v=1667367820">
+	<link rel="stylesheet" type="text/css" href="game.css?v=1676213405">
 
-	<script type="text/javascript" src="game.js?v=1667367820"></script>
+	<script type="text/javascript" src="game.js?v=1676213405"></script>
 	<!-- AnalyticsCode -->
 
 	<!-- APICode -->
@@ -43,6 +43,9 @@
 				<div id="MobileAdInGamePreroll-Box-Body">
 					<center>
 						<!-- MobileAdInGamePreroll -->
+						<!-- AdTest-MobileAdInGamePreroll -->
+						<!-- <img src="https://cdn-factory.marketjs.com/generic.png"> -->
+						<!-- EndOfAdTest-MobileAdInGamePreroll -->
 					</center>
 				</div>
 				<div id='MobileAdInGamePreroll-Box-Footer'></div>
